Revision history for {{$dist->name}}

{{$NEXT}}
        - convert to Dist::Zilla, with more metadata
        - pod patch (RT#51615)

0.15    2013-04-13 00:00:00Z
        - Remove test for Classic Mac, fixing RT#83318

0.14    2008-06-08 00:00:00Z
        - remove auto_install and update Module::Install

0.13    2007-10-19 00:00:00Z
        - add "chmod" and "stat" commands

0.12    2007-01-25 00:00:00Z
        - fix non-hard-coded '/' for Win32 users CORRECTLY; it
	  really works now, I promise!
        - add create_tree for quickly creating directory trees

0.11    2006-12-27 00:00:00Z
	- add environment variable to suppress auto-cleanup
	- fix hard-coded '/' for Win32 users

0.10    2006-12-09 00:00:00Z
	- up File::Slurp dependency to 9999.12, required for AS/Win32
	- increase test coverage
	- fix bug where a platform argument to new() is ignored

0.09    2006-09-14 00:00:00Z
        - decided to go back to File::Slurp
        - decided to croak if String::Random isn't installed
        - using Path::Class internally
        - added option to make UNIX paths Just Work on non-UNIX systems
          (perl has this already, but this converts to the right format
           internally, so that debugging messags make sense also)
        - actually works on Win32 now

0.08    2006-09-03 00:00:00Z
	More cleanups:
	 - clone => child
	 - binmode
	 - stringify
	doc fixes

0.06    2006-08-22 00:00:00Z
        Applied a patch (#21120) from TOBEYA.  API has changed a bit,
        but it's for the better.

0.05    2006-08-07 00:00:00Z
        Removed some debugging code that shouldn't have been pushed to
        CPAN :)

0.04    2006-08-07 00:00:00Z
	Added list, exists, read, write, append, and link; and lots
	more tests.

0.03    2006-07-17 00:00:00Z
	Fixed an even sillier bug: touch(@lines) didn't work because
	the touch looked like my @lines, not my @lines = @_; !!!
	Added a test for this

0.02    2006-07-03 00:00:00Z