@@ -4,7 +4,7 @@
 
 use Test::More tests => 8;
 use Directory::Scratch;
-use File::Slurp qw(read_file);
+use Path::Tiny;
 
 my $tmp = Directory::Scratch->new;
 
@@ -12,7 +12,7 @@ local $, = '!';
 local $/ = '!';
 
 ok($tmp->touch('foo', qw(these are some lines)), 'create foo');
-my $file = read_file(''. $tmp->exists('foo'));
+my $file = path(''. $tmp->exists('foo'))->slurp;
 ok($file, 'read it back in');
 is($file, 'these!are!some!lines!', 'lines end in !');
 
@@ -21,7 +21,7 @@ is_deeply(\@file, [qw(these are some lines)], 'works in array context too');
 
 ok($tmp->append('foo', qw(now there are more)), 'add more lines');
 
-$file = read_file(''. $tmp->exists('foo'));
+$file = path(''. $tmp->exists('foo'))->slurp;
 ok($file, 'read it back in');
 is($file, 'these!are!some!lines!now!there!are!more!', 'lines end in !');
 
