@@ -6,15 +6,15 @@ use Test::More tests => 8;
 use Directory::Scratch;
 use strict;
 use warnings;
-use File::Slurp qw(read_file);
+use Path::Tiny;
 
 my $tmp = Directory::Scratch->new;
 ok($tmp, 'created $tmp');
 ok($tmp->touch('foo', qw(foo bar baz)), 'created foo');
 ok($tmp->exists('foo'), 'foo exists');
-my @lines = read_file($tmp->exists('foo')->stringify);
+my @lines = path($tmp->exists('foo')->stringify)->lines;
 is(chomp @lines, 3, 'right number of lines');
 is_deeply(\@lines, [qw(foo bar baz)], 'foo has correct contents');
 ok($tmp->touch('bar'), 'created bar');
 ok($tmp->exists('bar'), 'bar exists');
-ok(!read_file($tmp->exists('bar')->stringify), 'bar has no content');
+ok(!path($tmp->exists('bar')->stringify)->slurp, 'bar has no content');
